--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,23 @@
   a {
     text-decoration: none;
   }
+
+  .desktop {
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+  
+  .mobile {
+    display: none;
+  
+    @media (max-width: 768px) {
+      display: block;
+    }
+  }
+
+
+
   
   // Common styles
   .container {
@@ -38,13 +55,7 @@
     line-height: 32px;
     font-weight: 300;
   }
-  
-  .highlightText {
-    font-size: 18px;
-    line-height: 32px;
-    font-weight: 700;
-  }
-  
+
   button {
     background-color: #9C0332;
     border-radius: 30px;
@@ -52,6 +63,7 @@
     font-size: 18px;
     transition: background-color .3s;
     padding: 13px;
+    display: block;
   
     &:hover {
       background-color: #871438;
@@ -84,7 +96,6 @@
   
       &-item {
         position: relative;
-        height: 300px;
         width: 100%;
         border-radius: 16px;
         overflow: hidden;
@@ -94,6 +105,7 @@
         padding: 32px;
         display: flex;
         align-items: flex-end;
+        aspect-ratio: 343 / 300;
   
         &::after {
           content: "";
@@ -129,6 +141,35 @@
           z-index: 1;
           text-decoration: none;
         }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    h1 {
+      font-size: 32px;
+      line-height: 39px;
+      text-align: center;
+    }
+  
+    p {
+      font-size: 14px;
+      line-height: 22px;
+      text-align: center;
+    }
+  
+    button {
+      margin: auto;
+    }
+  
+    .main {
+      height: 735px;
+      background-position: 30%;
+    }
+  
+    .games {
+      &-list {
+        flex-direction: column;
       }
     }
   }
