--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ footer {
   margin: auto;
   width: 100%;
 }
+@media (max-width: 768px) {
+  .container {
+    padding: 0 15px;
+  }
+}
 
 h1 {
   font-size: 64px;
